[package]
name = "monitor"
version = "0.1.0"
authors = ["Samuel Dolt <samuel@dolt.ch>"]

[dependencies]
redis = "0.8.0"
influent = "0.4"
serde_json = "1.0.2"
serde = "1"
base64 = "0.5.2"
influxdb = { git = "https://projects.dolt.ch/open-source/influxdb-rs.git"}
slog = "2"
slog-term = "2"
slog-async = "2"
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
subcmd = { git = "https://github.com/samdolt/subcmd-rs.git"}
djangohashers = "0.2"
